[gd_scene load_steps=51 format=2]

[ext_resource path="res://source/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/Merriweather-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://source/instrument/Instrument.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/visual/strings.png" type="Texture" id=4]
[ext_resource path="res://assets/visual/buttons/spacebar_default.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/buttons/spacebar_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/visual/buttons/button_d_default.png" type="Texture" id=7]
[ext_resource path="res://assets/visual/buttons/button_f_default.png" type="Texture" id=8]
[ext_resource path="res://assets/visual/buttons/button_a_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/visual/buttons/button_s_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/visual/buttons/button_d_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/visual/buttons/button_a_default.png" type="Texture" id=12]
[ext_resource path="res://assets/visual/buttons/button_s_default.png" type="Texture" id=13]
[ext_resource path="res://assets/visual/buttons/button_f_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/visual/buttons/button_up_default.png" type="Texture" id=15]
[ext_resource path="res://assets/visual/buttons/button_left_default.png" type="Texture" id=16]
[ext_resource path="res://assets/visual/buttons/button_left_pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/visual/buttons/button_down_default.png" type="Texture" id=18]
[ext_resource path="res://assets/visual/buttons/button_down_pressed.png" type="Texture" id=19]
[ext_resource path="res://assets/visual/buttons/button_up_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/visual/buttons/button_right_default.png" type="Texture" id=21]
[ext_resource path="res://assets/visual/buttons/button_right_pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/visual/Merriweather-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://source/Computer.gd" type="Script" id=24]
[ext_resource path="res://source/Main.gd" type="Script" id=25]
[ext_resource path="res://source/Course.gd" type="Script" id=26]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.933333, 0.866667, 0.8, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.933333, 0.866667, 0.8, 1 )
font_data = ExtResource( 23 )

[sub_resource type="InputEventAction" id=3]
action = "key_1"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="ButtonGroup" id=5]
resource_name = "Keys"

[sub_resource type="InputEventAction" id=6]
action = "key_2"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "key_3"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "key_4"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "hammer"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=14]
action = "art_up"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="ButtonGroup" id=16]
resource_name = "Articulations"

[sub_resource type="InputEventAction" id=17]
action = "art_left"

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[sub_resource type="InputEventAction" id=19]
action = "art_down"

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 19 )

[sub_resource type="InputEventAction" id=21]
action = "art_right"

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 21 )

[sub_resource type="Animation" id=23]
resource_name = "fade_out"
length = 1.62
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0.618, 1, -0.618, 0, 0, 0 ),
"times": PoolRealArray( 0, 1.62 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "reset"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Main" type="Node"]
script = ExtResource( 25 )
__meta__ = {
"_editor_description_": "handles quitting game"
}

[node name="Interface" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -309.0
margin_right = 500.0
margin_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "all the visual stuff
add touch function for buttons for?"
}

[node name="Background" type="ColorRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.0666667, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 62.0
margin_right = -100.0
margin_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VBoxContainer" parent="Interface/MarginContainer"]
margin_right = 800.0
margin_bottom = 494.0

[node name="Title" type="Label" parent="Interface/MarginContainer/VSplitContainer"]
margin_right = 800.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.866667, 0.8, 1 )
text = "Strung"
align = 2

[node name="Instructions" type="Label" parent="Interface/MarginContainer/VSplitContainer"]
margin_top = 131.0
margin_right = 800.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.866667, 0.8, 1 )
text = "Press R to replay target phrase
Repeat this phrase to advance"
align = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Interface/MarginContainer/VSplitContainer"]
margin_top = 220.0
margin_right = 800.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 494
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer"]
margin_right = 506.0
margin_bottom = 274.0

[node name="Padding" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_right = 506.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="MainKeys" type="GridContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 506.0
margin_bottom = 219.0
size_flags_horizontal = 7
size_flags_vertical = 3
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainerA" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys"]
margin_right = 123.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonA" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys/CenterContainerA"]
margin_left = 61.0
margin_top = 41.0
margin_right = 61.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 4 )
group = SubResource( 5 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="CenterContainerS" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys"]
margin_left = 127.0
margin_right = 250.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonS" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys/CenterContainerS"]
margin_left = 61.0
margin_top = 41.0
margin_right = 61.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 7 )
group = SubResource( 5 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="CenterContainerD" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonD" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys/CenterContainerD"]
margin_left = 61.0
margin_top = 41.0
margin_right = 61.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 9 )
group = SubResource( 5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 3

[node name="CenterContainerF" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys"]
margin_left = 381.0
margin_right = 504.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonF" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer/MainKeys/CenterContainerF"]
margin_left = 61.0
margin_top = 41.0
margin_right = 61.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 11 )
group = SubResource( 5 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 3

[node name="ButtonSpacebar" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 506.0
margin_bottom = 274.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.62
shortcut = SubResource( 13 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer"]
margin_left = 518.0
margin_right = 800.0
margin_bottom = 274.0

[node name="Padding" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 282.0
margin_bottom = 274.0

[node name="Padding2" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2"]
margin_right = 202.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="Padding3" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2"]
margin_top = 73.0
margin_right = 202.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="CenterContainerUp" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2"]
margin_top = 146.0
margin_right = 202.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonUp" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/CenterContainerUp"]
margin_left = 70.0
margin_right = 132.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 15 )
group = SubResource( 16 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 20 )

[node name="ArticulationKeys" type="HBoxContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2"]
margin_top = 212.0
margin_right = 202.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Padding" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys"]
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="CenterContainerLeft" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys"]
margin_left = 4.0
margin_right = 66.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonLeft" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys/CenterContainerLeft"]
margin_right = 62.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 18 )
group = SubResource( 16 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )

[node name="CenterContainerDown" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys"]
margin_left = 70.0
margin_right = 132.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonDown" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys/CenterContainerDown"]
margin_right = 62.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 20 )
group = SubResource( 16 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="CenterContainerRight" type="CenterContainer" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys"]
margin_left = 136.0
margin_right = 198.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonRight" type="TextureButton" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys/CenterContainerRight"]
margin_right = 62.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource( 22 )
group = SubResource( 16 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="Padding2" type="ColorRect" parent="Interface/MarginContainer/VSplitContainer/HSplitContainer/HBoxContainer/VBoxContainer2/ArticulationKeys"]
margin_left = 202.0
margin_right = 202.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.62
color = Color( 0.133333, 0.0666667, 0.2, 1 )

[node name="Strings" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Curtains" type="ColorRect" parent="Interface"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interface/Curtains"]
anims/fade_out = SubResource( 23 )
anims/reset = SubResource( 24 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "handles player input
plays sound through instrument"
}

[node name="Instrument" parent="Player" instance=ExtResource( 3 )]
volume_range = -4.0

[node name="Computer" type="Node" parent="."]
script = ExtResource( 24 )
__meta__ = {
"_editor_description_": "Lets the computer play Instrument target phrases.
Instances its own Instrument.
Handles level/lesson progression.
Plays assistant voicelines."
}
time = 2.4
current_lesson = -1

[node name="Course" type="Node" parent="Computer"]
script = ExtResource( 26 )

[node name="Instrument" parent="Computer" instance=ExtResource( 3 )]
volume_range = -2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Computer"]
bus = "System"
[connection signal="note_played" from="Player" to="Computer" method="_on_Player_note_played"]
[connection signal="note_released" from="Player" to="Computer" method="_on_Player_note_released"]
[connection signal="acknowledged" from="Computer" to="Player" method="_on_Computer_acknowledged"]
[connection signal="teaching_finished" from="Computer" to="Computer" method="_on_Computer_teaching_finished"]
[connection signal="teaching_finished" from="Computer" to="Player" method="_on_Computer_teaching_finished"]
[connection signal="teaching_started" from="Computer" to="Computer" method="_on_Computer_teaching_started"]
